PhantomSDK/Inc/PhFile.h

//if the platform is not WIN32 define some common
//types from WIN32 that are used below
typedef unsigned char BYTE, *PBYTE;
typedef char *PSTR;
//replace the cine handle with an int (not a pointer)
//to simplify the Matlab functions call
typedef int CINEHANDLE, *PCINEHANDLE;
typedef CINEHANDLE* PCINEHANDLE;
/*****************************************************************************/

// General color matrix descriptor
typedef struct tagCmDesc
{
	float matrix[9];				// RGB color matrix
	char label[256];				// Color matrix label
} CMDESC, *PCMDESC;
/*****************************************************************************/

// Cine File Codes
#define MIFILE_RAWCINE		0
#define MIFILE_CINE			1
#define MIFILE_JPEGCINE		2
#define MIFILE_AVI			3
#define MIFILE_TIFCINE		4
#define MIFILE_MPEG			5
#define MIFILE_MXFPAL		6
#define MIFILE_MXFNTSC		7
#define MIFILE_QTIME		8
/*****************************************************************************/


// Progress indicator
typedef BOOL (WINAPI* PROGRESSCB)(UINT Percent, CINEHANDLE hC);
/*****************************************************************************/

#define UC_VIEW									(1)	// Use case - view
#define UC_SAVE									(2) // Use case - save
/*****************************************************************************/

// PhGetCineInfo/ PhSetCineInfo selectors
#define GCI_CFA							0
#define GCI_FRAMERATE					1
#define GCI_EXPOSURE					2
#define GCI_AUTOEXPOSURE				3
#define GCI_REALBPP						4
#define GCI_CAMERASERIAL				5
#define GCI_HEADSERIAL0					6
#define GCI_HEADSERIAL1					7
#define GCI_HEADSERIAL2					8
#define GCI_HEADSERIAL3					9
#define GCI_TRIGTIMESEC					10
#define GCI_TRIGTIMEFR					11
#define GCI_ISFILECINE					12
#define GCI_IS16BPPCINE					13
#define GCI_ISCOLORCINE					14
#define GCI_ISMULTIHEADCINE				15
#define GCI_EXPOSURENS					16
#define GCI_EDREXPOSURENS  			    17
#define GCI_FRAMEDELAYNS				19
#define GCI_FROMFILETYPE				20
#define GCI_COMPRESSION					21
#define GCI_CAMERAVERSION				22
#define GCI_ROTATE						23
#define GCI_IMWIDTH						24
#define GCI_IMHEIGHT					25
#define GCI_IMWIDTHACQ					26
#define GCI_IMHEIGHTACQ					27
#define GCI_POSTTRIGGER					28
#define GCI_IMAGECOUNT					29
#define GCI_TOTALIMAGECOUNT				30
#define GCI_TRIGFRAME					31
#define GCI_AUTOEXPLEVEL				32
#define GCI_AUTOEXPTOP					33
#define GCI_AUTOEXPLEFT					34
#define GCI_AUTOEXPBOTTOM				35
#define GCI_AUTOEXPRIGHT				36
#define GCI_RECORDINGTIMEZONE			37
#define GCI_FIRSTIMAGENO                38
#define GCI_FIRSTMOVIEIMAGE             39
#define GCI_SENSOR					    51
#define GCI_SENSORMODE				    52
#define GCI_FRPSTEPS					100
#define GCI_FRP1X						101
#define GCI_FRP1Y						102
#define GCI_FRP2X						103
#define GCI_FRP2Y						104
#define GCI_FRP3X						105
#define GCI_FRP3Y						106
#define GCI_FRP4X						107
#define GCI_FRP4Y						108
#define GCI_WRITEERR					109
#define GCI_LENSDESCRIPTION				110
#define GCI_LENSAPERTURE				111
#define GCI_LENSFOCALLENGTH				112
#define GCI_WB							200
#define GCI_WBVIEW						201
#define GCI_WBISMETA					230
#define GCI_BRIGHT						202
#define GCI_CONTRAST					203
#define GCI_GAMMA						204
#define GCI_GAMMAR						223
#define GCI_GAMMAB						224
#define GCI_SATURATION					205
#define GCI_HUE							206
#define GCI_FLIPH						207
#define GCI_FLIPV						208
#define GCI_FILTERCODE					209
#define GCI_IMFILTER					210
#define GCI_INTALGO						211
#define GCI_PEDESTALR					212
#define GCI_PEDESTALG					213
#define GCI_PEDESTALB					214
#define GCI_FLARE						225
#define GCI_CHROMA						226
#define GCI_TONE						227
#define GCI_ENABLEMATRICES				228
#define GCI_USERMATRIX					229
#define GCI_RESAMPLEACTIVE				215
#define GCI_RESAMPLEWIDTH				216
#define GCI_RESAMPLEHEIGHT				217
#define GCI_CROPACTIVE					218
#define GCI_CROPRECTANGLE				219
#define GCI_OFFSET16_8					220
#define GCI_GAIN16_8					221
#define GCI_DEMOSAICINGFUNCPTR			222
//										252

#define GCI_VFLIPVIEWACTIVE				300
#define GCI_MAXIMGSIZE					400
#define GCI_FRPIMGNOARRAY				450
#define GCI_FRPRATEARRAY				451
#define GCI_FRPSHAPEARRAY				452
#define GCI_TRIGTC						470
#define GCI_TRIGTCU						471
#define GCI_PBRATE						472
#define GCI_TCRATE						473
#define GCI_SAVERANGE					500
#define GCI_SAVEFILENAME				501
#define GCI_SAVEFILETYPE				502
#define GCI_SAVE16BIT					503
#define GCI_SAVEPACKED					504
#define GCI_SAVEXML						505
#define GCI_SAVESTAMPTIME				506
#define GCI_SAVEDECIMATION				1035
#define GCI_SAVEAVIFRAMERATE			520
#define GCI_SAVEAVICOMPRESSORLIST		521
#define GCI_SAVEAVICOMPRESSORINDEX		522
#define GCI_SAVEDPXLSB					530
#define GCI_SAVEDPXTO10BPS				531
#define GCI_SAVEDPXDATAPACKING			532
#define GCI_SAVEDPX10BITLOG				533
#define GCI_SAVEDPXEXPORTLOGLUT			534
#define GCI_SAVEDPX10BITLOGREFWHITE		535
#define GCI_SAVEDPX10BITLOGREFBLACK		536
#define GCI_SAVEDPX10BITLOGGAMMA		537
#define GCI_SAVEDPX10BITLOGFILMGAMMA	538
#define GCI_SAVEQTPLAYBACKRATE			550
#define GCI_SAVECCIQUALITY				560
#define GCI_NOPROCESSING				601
#define GCI_CINEDESCRIPTION				603
/*****************************************************************************/

// Create/destroy a CINEHANDLE
EXIMPROC HRESULT PhNewCineFromFile(PSTR szFN, PCINEHANDLE phC);
EXIMPROC HRESULT PhNewCineFromCamera(INT CN, INT CineNr, PCINEHANDLE phC);
EXIMPROC HRESULT PhGetCineLive(INT CN, PCINEHANDLE phC);
EXIMPROC HRESULT PhDestroyCine(CINEHANDLE hC);
EXIMPROC HRESULT PhDuplicateCine(PCINEHANDLE phCDest, CINEHANDLE hCSrc);
/*****************************************************************************/

// Get cine images
EXIMPROC HRESULT PhGetCineImage(CINEHANDLE hC, PIMRANGE pRng, PBYTE pPixel, UINT BufferSize, PIH pIH);
/*****************************************************************************/

// User interface functions
EXIMPROC BOOL PhGetOpenCineName(PSTR szFileName, UINT Options);